Добавил фон для крупных блоков

--- a/sass/global/fonts.scss
+++ b/sass/global/fonts.scss
@@ -3,6 +3,6 @@ body {
   font-size: 17px;
   font-weight: normal;
   line-height: 24px;
-  color: $color-title;
+  color: $color-text-ordinary;
   font-style: normal;
 }
