--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,3 +1,4 @@
-$color-ordinary: rgba(68, 68, 68, 1);
-$color-placeholder: rgba(68, 68, 68, 0.3);
-$color-title: rgba(0, 0, 0, 1);
+$color-text-ordinary: rgba(68, 68, 68, 1);
+$color-text-placeholder: rgba(68, 68, 68, 0.3);
+$color-text-title: rgba(0, 0, 0, 1);
+$color-background: rgba(241, 241, 241, 1);
