--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -1,3 +1,10 @@
 .main-footer {
   background-color: $color-background;
 }
+
+.main-footer__copyright-text {
+  font-size: 19px;
+  line-height: 18px;
+  color: $color-text-title;
+  font-weight: bold;
+}
