Добавил добавил обводки для крупных блоков

--- a/sass/blocks/best-seller.scss
+++ b/sass/blocks/best-seller.scss
@@ -1,4 +1,12 @@
+.best-seller {
+  padding-top: 32px;
+
+  @include outline;
+}
+
 .best-seller__title {
+  padding: 0;
+  margin: 0;
   font-size: 25px;
   line-height: 30px;
   font-weight: bold;
