--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,4 +1,11 @@
+.reviews {
+  padding-top: 55px;
+
+  @include outline;
+}
+
 .reviews__title {
+  margin: 0;
   font-size: 25px;
   line-height: 30px;
   font-weight: bold;
