--- a/sass/blocks/main-menu.scss
+++ b/sass/blocks/main-menu.scss
@@ -1,3 +1,9 @@
+.main-menu__list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
 .main-menu__link {
   text-decoration: none;
   color: $color-text-title;
