--- a/sass/blocks/order.scss
+++ b/sass/blocks/order.scss
@@ -1,35 +1,10 @@
+.order {
+  padding-top: 27px;
+
+  @include outline;
+}
+
 .order__description {
+  margin: 0;
   font-size: 13px;
-}
-
-.order-form__title {
-  @include form-title;
-}
-
-.order-form__label {
-  font-size: 17px;
-  line-height: 18px;
-  color: $color-text-title;
-  font-weight: bold;
-}
-
-.order-form__text::-webkit-input-placeholder {
-  @include placeholder-text;
-}
-
-.order-form__text::-moz-placeholder {
-  @include placeholder-text;
-}
-
-.order-form__text:-ms-input-placeholder {
-  @include placeholder-text;
-}
-
-.order-form__caption {
-  @include form-title;
-}
-
-.order-form__note {
-  font-size: 14px;
-  line-height: 16px;
 }
