--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -1,3 +1,9 @@
+.production {
+  padding-top: 25px;
+
+  @include outline;
+}
+
 .production__video {
   width: 260px;
   height: 150px;
@@ -6,6 +12,7 @@
 }
 
 .production__title {
+  margin: 0;
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
