Исправил отступы в шрифтах

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@
 @import "variables.scss";
 @import "mixins.scss";
 
-@import "global/fonts.scss";
+@import "global/typography.scss";
 
 //index.html
 @import "blocks/main-header.scss";
