--- a/sass/global/typography.scss
+++ b/sass/global/typography.scss
@@ -1,8 +1,8 @@
 @font-face {
     font-family: "Open Sans";
     src: local("OpenSansRegular"),
-         url("../fonts/opensans.woff") format("woff"),
-         url("../fonts/opensans.woff2") format("woff2");
+    url("../fonts/opensans.woff") format("woff"),
+    url("../fonts/opensans.woff2") format("woff2");
     font-style: normal;
     font-weight: normal;
 }
@@ -10,14 +10,14 @@
 @font-face {
     font-family: "Open Sans";
     src: local("OpenSansBold"),
-         url("../fonts/opensansbold.woff") format("woff"),
-         url("../fonts/opensansbold.woff2") format("woff2");
+    url("../fonts/opensansbold.woff") format("woff"),
+    url("../fonts/opensansbold.woff2") format("woff2");
     font-style: normal;
     font-weight: bold;
 }
 
 body {
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Open Sans, Arial, sans-serif;
   font-size: 17px;
   font-weight: normal;
   line-height: 24px;
