--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -9,6 +9,10 @@
   background-color: #ffffff;
 }
 
+.main-header__container {
+  width: 260px;
+}
+
 .main-header__title {
   margin: 0;
   padding: 0;
