--- a/sass/blocks/btn.scss
+++ b/sass/blocks/btn.scss
@@ -1,7 +1,21 @@
 .btn {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 260px;
+  padding-top: 15px;
+  padding-right: 10px;
+  padding-bottom: 15px;
+  padding-left: 10px;
+
+  font-weight: bold;
   font-size: 17px;
   line-height: 16px;
+  text-align: center;
   color: $color-text-ordinary;
-  text-decoration: none;
   text-transform: uppercase;
+  text-decoration: none;
+
+  background-color: #ffffff;
+  border: 2px solid $color-text-ordinary;
+  cursor: pointer;
 }
