--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -1,12 +1,56 @@
 .main-footer {
   padding-top: 30px;
+
   background-color: $color-background;
+
   @include outline;
 }
 
+.social-link {
+  display: inline-block;
+
+  font-size: 0;
+
+  &--insta {
+    width: 21px;
+    height: 21px;
+
+    background-image: url("../img/icon-insta.svg");
+    background-repeat: no-repeat;
+  }
+
+  &--fb {
+    width: 15px;
+    height: 27px;
+
+    background-image: url("../img/icon-fb.svg");
+    background-repeat: no-repeat;
+  }
+
+  &--tw {
+    width: 23px;
+    height: 20px;
+
+    background-image: url("../img/icon-twitter.svg");
+    background-repeat: no-repeat;
+  }
+}
+
 .main-footer__copyright-text {
+  font-weight: bold;
   font-size: 19px;
   line-height: 18px;
   color: $color-text-title;
-  font-weight: bold;
+}
+
+.main-footer__copyright-link {
+  display: inline-block;
+  width: 27px;
+  height: 34px;
+
+  font-size: 0;
+  vertical-align: top;
+
+  background-image: url("../img/logo-htmlacademy.svg");
+  background-repeat: no-repeat;
 }
