--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -5,17 +5,36 @@
 }
 
 .production__video {
+  position: relative;
+
   width: 260px;
   height: 150px;
+
   background-image: url("../img/video-mobile@1x.jpg");
   background-repeat: no-repeat;
 }
 
+.production__play-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 101px;
+  height: 77px;
+  margin: 0;
+  padding: 0;
+
+  background-image: url("../img/icon-play.svg");
+  border: 0;
+  transform: translate(-50%, -50%);
+}
+
 .production__title {
   margin: 0;
+
+  font-weight: bold;
   font-size: 17px;
   line-height: 24px;
-  font-weight: bold;
   color: $color-text-title;
 }
 
