--- a/sass/global/typography.scss
+++ b/sass/global/typography.scss
@@ -17,7 +17,9 @@
 }
 
 body {
-  font-family: "Open Sans, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 17px;
   font-weight: normal;
   line-height: 24px;
