--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -1,13 +1,20 @@
 .contacts {
   padding-top: 45px;
+
   @include outline;
+}
+
+.contacts__container {
+  @include container;
 }
 
 .contacts__title {
   margin: 0;
+  margin-bottom: 30px;
+
   font-size: 18px;
   line-height: 30px;
-  color: $color-text-title
+  color: $color-text-title;
 }
 
 .contacts__field {
@@ -16,8 +23,8 @@
 }
 
 .contacts__text {
-  text-decoration: none;
-  color: $color-text-ordinary;
   font-size: 15px;
   line-height: 30px;
+  color: $color-text-ordinary;
+  text-decoration: none;
 }
