--- a/sass/blocks/order.scss
+++ b/sass/blocks/order.scss
@@ -4,7 +4,12 @@
   @include outline;
 }
 
+.order__container {
+  @include container;
+}
+
 .order__description {
   margin: 0;
+
   font-size: 13px;
 }
