--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@
 @import "mixins.scss";
 
 @import "global/typography.scss";
+@import "global/layout.scss";
 
 //index.html
 @import "blocks/main-header.scss";
