--- a/sass/blocks/best-seller.scss
+++ b/sass/blocks/best-seller.scss
@@ -4,24 +4,40 @@
   @include outline;
 }
 
+.best-seller__container {
+  @include container;
+}
+
 .best-seller__title {
-  padding: 0;
   margin: 0;
+  padding: 0;
+
+  font-weight: bold;
   font-size: 25px;
   line-height: 30px;
-  font-weight: bold;
   color: $color-text-title;
 }
 
 .best-seller__state {
-  line-height: 16px;
   font-weight: bold;
-  text-transform: uppercase;
+  line-height: 16px;
   color: $color-cyan;
+  text-transform: uppercase;
 }
 
 .best-seller__description {
   font-size: 15px;
+}
+
+.best-seller__table {
+  width: 100%;
+  margin-bottom: 27px;
+
+  border-collapse: collapse;
+}
+
+.best-seller__table-row {
+  border-bottom: 1px solid #ececec;
 }
 
 .best-seller__table-cell {
