--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -4,17 +4,24 @@
   @include outline;
 }
 
+.features__container {
+  @include container;
+}
+
 .features__title {
   margin: 0;
+  margin-bottom: 30px;
+
+  font-weight: bold;
   font-size: 25px;
   line-height: 30px;
-  font-weight: bold;
   color: $color-text-title;
 }
 
 .features__list {
-  padding: 0;
   margin: 0;
+  padding: 0;
+
   list-style-type: none;
 }
 
