--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -1,4 +1,5 @@
 .main-footer {
+  margin-top: 39px;
   padding-top: 30px;
 
   background-color: $color-background;
@@ -6,34 +7,8 @@
   @include outline;
 }
 
-.social-link {
-  display: inline-block;
-
-  font-size: 0;
-
-  &--insta {
-    width: 21px;
-    height: 21px;
-
-    background-image: url("../img/icon-insta.svg");
-    background-repeat: no-repeat;
-  }
-
-  &--fb {
-    width: 15px;
-    height: 27px;
-
-    background-image: url("../img/icon-fb.svg");
-    background-repeat: no-repeat;
-  }
-
-  &--tw {
-    width: 23px;
-    height: 20px;
-
-    background-image: url("../img/icon-twitter.svg");
-    background-repeat: no-repeat;
-  }
+.main-footer__container {
+  @include container;
 }
 
 .main-footer__copyright-text {
