--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -6,18 +6,26 @@
 
 .main-header__top {
   padding-top: 22px;
+
   background-color: #ffffff;
+  border-bottom: 1px solid #ececec;
 }
 
 .main-header__container {
   width: 260px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .main-header__title {
   margin: 0;
   padding: 0;
+  padding-top: 75px;
+  padding-bottom: 75px;
+
+  font-weight: bold;
   font-size: 27px;
   line-height: 30px;
-  font-weight: bold;
+  text-align: center;
   color: $color-text-title;
 }
