--- a/sass/blocks/map.scss
+++ b/sass/blocks/map.scss
@@ -1,6 +1,7 @@
 .map {
-  min-width: 320px;
-  min-height: 457px;
+  height: 457px;
+  margin-bottom: 39px;
+
   background-image: url("../img/map-mobile@1x.jpg");
   background-repeat: no-repeat;
 }
