--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -3,12 +3,14 @@
 
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
   @include outline;
 }
 
 .promo__title {
-  width: 244px;
+  box-sizing: border-box;
   margin: 0;
   margin-bottom: 125px;
   padding: 0;
@@ -20,10 +22,15 @@
   line-height: 30px;
   text-align: center;
   color: $color-text-title;
+
+  @include container;
 }
 
 .promo__link {
+  display: block;
+  padding-top: 25px;
   padding-right: 30px;
+  padding-bottom: 25px;
   padding-left: 30px;
 
   font-weight: bold;
