--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -1,3 +1,9 @@
+@mixin container {
+  margin-right: auto;
+  margin-left: auto;
+  width: 260px;
+}
+
 @mixin form-title {
   font-size: 17px;
   line-height: 16px;
