--- a/sass/global/typography.scss
+++ b/sass/global/typography.scss
@@ -13,7 +13,7 @@
   url("../fonts/opensansbold.woff") format("woff"),
   url("../fonts/opensansbold.woff2") format("woff2");
   font-style: normal;
-  font-weight: bold;
+  font-weight: normal;
 }
 
 body {
