--- a/sass/blocks/best-seller.scss
+++ b/sass/blocks/best-seller.scss
@@ -1,7 +1,5 @@
 .best-seller {
   padding-top: 32px;
-
-  @include outline;
 }
 
 .best-seller__container {
@@ -10,6 +8,7 @@
 
 .best-seller__title {
   margin: 0;
+  margin-bottom: 5px;
   padding: 0;
 
   font-weight: bold;
@@ -26,6 +25,10 @@
 }
 
 .best-seller__description {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 25px;
+
   font-size: 15px;
 }
 
@@ -41,10 +44,24 @@
 }
 
 .best-seller__table-cell {
+  padding-top: 10px;
+  padding-bottom: 10px;
+
   font-size: 15px;
   line-height: 20px;
+
+  &--value {
+    width: 165px;
+  }
+}
+
+.best-seller__image {
+  margin-bottom: 20px;
 }
 
 .best-seller__price {
+  margin-bottom: 25px;
+
   font-weight: bold;
+  text-align: center;
 }
