--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -1,6 +1,7 @@
 .main-footer {
   margin-top: 39px;
   padding-top: 30px;
+  padding-bottom: 20px;
 
   background-color: $color-background;
 
@@ -11,7 +12,13 @@
   @include container;
 }
 
+.main-footer__copyright {
+  text-align: center;
+}
+
 .main-footer__copyright-text {
+  margin-right: 30px;
+
   font-weight: bold;
   font-size: 19px;
   line-height: 18px;
