--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -3,6 +3,9 @@
   padding-right: 30px;
   padding-bottom: 46px;
   padding-left: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 260px;
 
   border-top: 1px solid #c7c7c7;
 
