--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -1,18 +1,17 @@
 .promo {
-  padding-top: 75px;
+  padding-top: 90px;
 
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-
-  @include outline;
+  background-position: top;
 }
 
 .promo__title {
   box-sizing: border-box;
   margin: 0;
-  margin-bottom: 125px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 120px;
   padding: 0;
   padding-right: 8px;
   padding-left: 8px;
@@ -22,11 +21,15 @@
   line-height: 30px;
   text-align: center;
   color: $color-text-title;
+}
 
-  @include container;
+.promo__categories {
+
 }
 
 .promo__link {
+  position: relative;
+
   display: block;
   padding-top: 25px;
   padding-right: 30px;
@@ -38,11 +41,40 @@
   color: #ffffff;
   text-decoration: none;;
 
+  &::after {
+    content: "";
+    position: absolute;
+
+    opacity: 0.5;
+  }
+
   &--interior {
     background-color: $color-cyan;
+
+    &::after {
+      top: 23px;
+      right: 34px;
+
+      width: 41px;
+      height: 62px;
+
+      background-image: url("../img/icon-interior.svg");
+      background-repeat: no-repeat;
+    }
   }
 
   &--toys {
     background-color: #56c3b2;
+
+    &::after {
+      top: 20px;
+      right: 25px;
+
+      width: 61px;
+      height: 61px;
+
+      background-image: url("../img/icon-toy.svg");
+      background-repeat: no-repeat;
+    }
   }
 }
