--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,5 +1,5 @@
 .reviews {
-  padding-top: 55px;
+  padding-top: 20px;
 
   @include outline;
 }
@@ -28,6 +28,7 @@
 
 .reviews__author {
   display: block;
+  margin-top: 20px;
 
   font-weight: bold;
   font-size: 18px;
@@ -42,6 +43,8 @@
 }
 
 .reviews__btns {
+  margin-top: 30px;
+  margin-bottom: 30px;
   font-size: 0;
 }
 
