--- a/sass/blocks/social-link.scss
+++ b/sass/blocks/social-link.scss
@@ -1,7 +1,8 @@
 .social-link {
   display: inline-block;
+  margin-right: 37px;
 
-  font-size: 0;
+  vertical-align: top;
 
   &--insta {
     width: 21px;
@@ -22,6 +23,7 @@
   &--tw {
     width: 23px;
     height: 20px;
+    margin-right: 0;
 
     background-image: url("../img/icon-twitter.svg");
     background-repeat: no-repeat;
