--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -2,6 +2,23 @@
   margin-right: auto;
   margin-left: auto;
   width: 260px;
+/*
+  @media (min-width: 768px) {
+    width: 668px;
+  }
+
+  @media (min-width: 768px) {
+    width: 1050px;
+  }
+  */
+}
+
+@mixin clearfix {
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 @mixin form-title {
