--- a/sass/blocks/logo.scss
+++ b/sass/blocks/logo.scss
@@ -3,12 +3,24 @@
   width: 86px;
   height: 35px;
   margin-right: auto;
-  margin-bottom: 22px;
+  margin-bottom: 27px;
   margin-left: auto;
 }
 
 @media (min-width: 768px) {
   .logo {
     float: left;
+    margin-top: 23px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .logo {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
   }
 }
