--- a/sass/blocks/map.scss
+++ b/sass/blocks/map.scss
@@ -1,7 +1,10 @@
 .map {
   height: 457px;
+  margin-right: auto;
   margin-bottom: 39px;
+  margin-left: auto;
 
   background-image: url("../img/map-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
 }
