--- a/sass/blocks/logo.scss
+++ b/sass/blocks/logo.scss
@@ -16,11 +16,12 @@
 
 @media (min-width: 1150px) {
   .logo {
-    margin: 0;
     position: absolute;
-    top: 50%;
+    top: 23px;
     left: 50%;
 
-    transform: translate(-50%, -50%);
+    margin: 0;
+
+    transform: translateX(-50%);
   }
 }
