--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -1,7 +1,7 @@
 .main-header {
   position: relative;
-  background-color: $color-background;
 
+  background-color: $color-background;
 }
 
 .main-header__top {
@@ -9,6 +9,7 @@
 
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
+
   @include clearfix;
 }
 
@@ -26,23 +27,11 @@
 }
 
 @media (min-width: 768px) {
-
   .main-header__top {
     padding: 0;
   }
 
   .main-header__container {
-    width: 668px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-}
-
-@media (min-width: 1150px) {
-  .main-header__container {
-    width: 1050px;
-    margin-left: auto;
-    margin-right: auto;
+    @include container;
   }
 }
