Добавил медиавыражения внутрь блоков

--- a/sass/blocks/best-seller.scss
+++ b/sass/blocks/best-seller.scss
@@ -1,8 +1,15 @@
 .best-seller {
+  position: relative;
   padding-top: 32px;
+
+  @media ($tablet) {
+    padding-top: 55px;
+  }
 }
 
 .best-seller__container {
+  position: relative;
+
   @include container;
 }
 
@@ -15,6 +22,13 @@
   font-size: 25px;
   line-height: 30px;
   color: $color-text-title;
+
+  @media ($tablet) {
+    padding-right: 167px;
+
+    font-size: 43px;
+    line-height: 50px;
+  }
 }
 
 .best-seller__state {
@@ -22,6 +36,16 @@
   line-height: 16px;
   color: $color-cyan;
   text-transform: uppercase;
+
+  @media ($tablet) {
+    position: absolute;
+    top: 15px;
+    right: 0;
+
+    width: 125px;
+
+    text-align: center;
+  }
 }
 
 .best-seller__description {
@@ -30,6 +54,10 @@
   margin-bottom: 25px;
 
   font-size: 15px;
+
+  @media ($tablet) {
+    padding-right: 410px;
+  }
 }
 
 .best-seller__table {
@@ -37,6 +65,11 @@
   margin-bottom: 27px;
 
   border-collapse: collapse;
+
+  @media ($tablet) {
+    width: 290px;
+    padding-right: 410px;
+  }
 }
 
 .best-seller__table-row {
@@ -59,6 +92,12 @@
   width: 260px;
   height: 316px;
   margin-bottom: 20px;
+
+  @media ($tablet) {
+    position: absolute;
+    top: 75px;
+    right: 0;
+  }
 }
 
 .best-seller__price {
@@ -66,52 +105,4 @@
 
   font-weight: bold;
   text-align: center;
-}
-
-@media (min-width: 768px) {
-  .best-seller {
-    padding-top: 55px;
-  }
-
-  .best-seller__container {
-    position: relative;
-  }
-
-  .best-seller__title {
-    padding-right: 167px;
-
-    font-size: 43px;
-    line-height: 50px;
-  }
-
-  .best-seller__state {
-    position: absolute;
-    top: 15px;
-    right: 0;
-
-    width: 125px;
-
-    text-align: center;
-  }
-}
-
-@media (min-width: 768px) {
-  .best-seller {
-    position: relative;
-  }
-
-  .best-seller__image {
-    position: absolute;
-    top: 75px;
-    right: 0;
-  }
-
-  .best-seller__table {
-    width: 290px;
-    padding-right: 410px;
-  }
-
-  .best-seller__description {
-    padding-right: 410px;
-  }
 }
