--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -22,14 +22,24 @@
   line-height: 30px;
   text-align: center;
   color: $color-text-title;
+
+  @media ($tablet) {
+    font-size: 43px;
+    line-height: 50px;
+  }
+}
+
+.promo__categories {
+  @media ($tablet) {
+    @include container;
+    font-size: 0;
+  }
 }
 
 .promo__link {
-  position: relative;
-
   display: block;
   padding-top: 25px;
-  padding-right: 100px;
+  padding-right: 30px;
   padding-bottom: 25px;
   padding-left: 30px;
 
@@ -38,20 +48,41 @@
   color: #ffffff;
   text-decoration: none;;
 
-  &::after {
+  &--interior {
+    background-color: $color-cyan;
+  }
+
+  &--toys {
+    background-color: #56c3b2;
+  }
+
+  @media ($tablet) {
+    box-sizing: border-box;
+    display: inline-block;
+    font-size: 19px;
+    width: 50%;
+    padding-bottom: 38px;
+    padding-top: 30px;
+  }
+}
+
+.promo__align-center {
+  position: relative;
+  display: block;
+  width: 190px;
+  padding-right: 70px;
+  margin: 0 auto;
+
+  &::before {
     content: "";
     position: absolute;
+    right: 0;
 
     opacity: 0.5;
   }
 
   &--interior {
-    background-color: $color-cyan;
-
-    &::after {
-      top: 23px;
-      right: 34px;
-
+    &::before {
       width: 41px;
       height: 62px;
 
@@ -61,38 +92,12 @@
   }
 
   &--toys {
-    background-color: #56c3b2;
-
-    &::after {
-      top: 20px;
-      right: 25px;
-
+    &::before {
       width: 61px;
       height: 61px;
 
       background-image: url("../img/icon-toy.svg");
       background-repeat: no-repeat;
     }
-  }
-}
-
-@media (min-width: 768px) {
-  .promo__title {
-    font-size: 43px;
-    line-height: 50px;
-  }
-
-  .promo__categories {
-    @include container;
-    font-size: 0;
-  }
-
-  .promo__link {
-    box-sizing: border-box;
-    display: inline-block;
-    font-size: 19px;
-    width: 50%;
-    padding-bottom: 38px;
-    padding-top: 30px;
   }
 }
