--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -3,3 +3,6 @@ $color-text-placeholder: rgba(68, 68, 68, 0.3);
 $color-text-title: rgba(0, 0, 0, 1);
 $color-background: rgba(241, 241, 241, 1);
 $color-cyan: rgba(99, 209, 187, 1);
+
+$tablet: "min-width: 768px";
+$desktop: "min-width: 1150px";
