--- a/sass/blocks/best-seller.scss
+++ b/sass/blocks/best-seller.scss
@@ -1,9 +1,14 @@
 .best-seller {
   position: relative;
+
   padding-top: 32px;
 
   @media ($tablet) {
     padding-top: 55px;
+  }
+
+  @media ($desktop) {
+    padding-top: 0;
   }
 }
 
@@ -11,6 +16,12 @@
   position: relative;
 
   @include container;
+}
+
+.best-seller__header {
+  @media ($tablet) {
+    @include clearfix;
+  }
 }
 
 .best-seller__title {
@@ -24,10 +35,19 @@
   color: $color-text-title;
 
   @media ($tablet) {
-    padding-right: 167px;
+    float: left;
+    width: 520px;
 
     font-size: 43px;
     line-height: 50px;
+  }
+
+  @media ($desktop) {
+    position: relative;
+    top: 120px;
+    z-index: 1;
+
+    padding-left: 175px;
   }
 }
 
@@ -38,37 +58,72 @@
   text-transform: uppercase;
 
   @media ($tablet) {
-    position: absolute;
-    top: 15px;
-    right: 0;
-
+    float: right;
     width: 125px;
+    margin-top: 15px;
 
     text-align: center;
+  }
+
+  @media ($desktop) {
+    position: absolute;
+    top: 115px;
+    left: 0;
+  }
+}
+
+.best-seller__info {
+  @media ($tablet) {
+    padding-right: 410px;
+  }
+
+  @media ($desktop) {
+    padding-top: 160px;
+    padding-right: 583px;
+    padding-left: 175px;
+  }
+}
+
+.best-seller__buy {
+  @media ($tablet) {
+    padding-right: 410px;
+  }
+
+  @media ($desktop) {
+    padding-right: 583px;
+    padding-left: 175px;
   }
 }
 
 .best-seller__description {
   margin: 0;
   margin-top: 20px;
-  margin-bottom: 25px;
 
   font-size: 15px;
 
   @media ($tablet) {
-    padding-right: 410px;
+    margin-bottom: 25px;
+
+    font-size: 17px;
+  }
+
+  @media ($desktop) {
+    margin-bottom: 65px;
   }
 }
 
 .best-seller__table {
   width: 100%;
-  margin-bottom: 27px;
 
   border-collapse: collapse;
 
   @media ($tablet) {
     width: 290px;
-    padding-right: 410px;
+    margin-bottom: 50px;
+  }
+
+  @media ($desktop) {
+    margin-bottom: 105px;
   }
 }
 
@@ -97,11 +152,28 @@
     position: absolute;
     top: 75px;
     right: 0;
+
+    width: 333px;
+    height: 404px;
+  }
+
+  @media ($desktop) {
+    position: absolute;
+    top: 75px;
+    right: 0;
+
+    width: 525px;
+    height: 636px;
   }
 }
 
+.best-seller__image img {
+  width: 100%;
+  height: 100%;
+}
+
 .best-seller__price {
-  margin-bottom: 25px;
+  margin-bottom: 36px;
 
   font-weight: bold;
   text-align: center;
