--- a/sass/blocks/main-menu.scss
+++ b/sass/blocks/main-menu.scss
@@ -9,7 +9,7 @@
 .main-menu__list--categories {
   @media ($tablet) {
     position: absolute;
-    width: 435px;
+    width: 380px;
     left: 0;
     top: 100px;
   }
@@ -28,29 +28,30 @@
     padding: 0;
     margin-right: 36px;
     font-size: 15px;
+
+    &--catalog {
+      padding-left: 0;
+    }
   }
 
   @media ($desktop) {
     padding-left: 35px;
     padding-top: 30px;
-    padding-right: 35px;
+    padding-right: 30px;
     padding-bottom: 30px;
     margin-right: 0;
-  }
+    font-size: 17px;
 
-  &--catalog {
-    @media ($desktop) {
+    &--catalog {
       padding-left: 0;
     }
   }
 }
 
-.main-menu__list--categories .main-menu__link {
+.main-menu__list--categories .main-menu__link--catalog {
   @media ($desktop) {
-    &:nth-child(1) {
-      border-right: 1px solid #ececec;
-      padding-left: 0;
-    }
+    border-right: 1px solid #ececec;
+    padding-left: 0;
   }
 }
 
@@ -125,6 +126,18 @@
   font-weight: bold;
   color: $color-text-title;
   text-decoration: none;
+
+  @media ($tablet) {
+    &--search {
+      padding-right: 0;
+      border-left: 1px solid #ececec;
+      border-right: 1px solid #ececec;
+    }
+
+    &--cart {
+      padding-right: 0;
+    }
+  }
 }
 
 .main-menu__align-center {
@@ -151,13 +164,6 @@
       background-image: url("../img/icon-search.svg");
       background-repeat: no-repeat;
     }
-
-    @media ($tablet) {
-      font-size: 0;
-      padding-right: 0;
-      border-left: 1px solid #ececec;
-      border-right: 1px solid #ececec;
-    }
   }
 
   &--cart {
@@ -168,32 +174,71 @@
       background-image: url("../img/icon-cart.svg");
       background-repeat: no-repeat;
     }
-
-    @media ($tablet) {
-      padding-right: 0;
-      font-size: 17px;
-    }
   }
 
   @media ($tablet) {
 
+    &--catalog {
+      padding-left: 0;
+      display: inline;
+    }
+
+    &--order {
+      padding-left: 0;
+      display: inline;
+    }
+
+    &--search {
+      width: auto;
+      font-size: 0;
+      padding-right: 0;
+    }
+
+    &--cart {
+      padding-left: 30px;
+      text-align: right;
+      padding-right: 0;
+      font-size: 17px;
+    }
   }
 }
 
 .extra-nav {
   display: none;
+  list-style-type: none;
+  font-size: 0;
+  margin: 0;
+  padding: 0;
 
-  @media ($tablet) {
-    display: none;
-    float: left;
+  @media ($desktop) {
+    display: block;
+    position: absolute;
+    top: 100px;
+    left: 0;
   }
+}
+
+.extra-nav__item {
+  display: inline-block;
+  margin-right: 57px;
+}
+
+.extra-nav__link {
+  font-size: 15px;
+  line-height: 24px;
+  color: $color-text-title;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .delivery-info {
   display: none;
+  font-size: 15px;
 
   @media ($tablet) {
-    display: none;
-    float: right;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 100px;
   }
 }
