--- a/sass/blocks/catalog.scss
+++ b/sass/blocks/catalog.scss
@@ -1,5 +1,10 @@
 .catalog {
+  font-size: 0;
   padding-top: 30px;
+
+  @media ($tablet) {
+    padding-top: 80px;
+  }
 }
 
 .catalog__container {
@@ -8,4 +13,80 @@
 
 .catalog-item {
   margin-bottom: 30px;
+  @include clearfix;
+
+  @media ($tablet) {
+    border-bottom: 1px solid #c7c7c7;
+  }
+
+  @media ($desktop) {
+    display: inline-block;
+    vertical-align: top;
+    width: 315px;
+    border: 0;
+    margin-right: 51px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.catalog-item__title {
+  @media ($tablet) {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
+.catalog-item__description {
+  @media ($tablet) {
+    font-size: 15px;
+    line-height: 30px;
+  }
+}
+
+.catalog-item__img {
+  @media ($tablet) {
+    width: 334px;
+    height: 334px;
+    float: left;
+  }
+
+  @media ($tablet) {
+    width: 316px;
+    height: 462px;
+    float: left;
+  }
+}
+
+.catalog-item__img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.catalog-item__content {
+  @media ($tablet) {
+    float: left;
+    width: 304px;
+    padding-left: 30px;
+    padding-top: 30px;
+    margin-bottom: 60px;
+  }
+
+  @media ($desktop) {
+    width: 284px;
+    border: 1px solid #c7c7c7;
+  }
+}
+
+.catalog-item__info {
+  @media ($tablet) {
+    margin-bottom: 150px;
+  }
+}
+
+.catalog-item__order {
+
 }
