--- a/sass/blocks/main-footer.scss
+++ b/sass/blocks/main-footer.scss
@@ -4,14 +4,44 @@
   padding-bottom: 20px;
 
   background-color: $color-background;
+
+  @media ($tablet) {
+    margin-top: 58px;
+    @include clearfix;
+    padding-top: 50px;
+    padding-bottom: 10px;
+  }
+
+  @media ($desktop) {
+    margin-top: 105px;
+  }
 }
 
 .main-footer__container {
   @include container;
 }
 
+.main-footer__logo {
+  display: none;
+
+  @media ($tablet) {
+    display: block;
+    //width: 160px;
+    width: 33%;
+    float: left;
+  }
+}
+
 .main-footer__copyright {
   text-align: center;
+
+  @media ($tablet) {
+    display: block;
+    //width: 197px;
+    width: 33%;
+    float: left;
+    text-align: right;
+  }
 }
 
 .main-footer__copyright-text {
