--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -1,9 +1,36 @@
 .contacts {
+  position: relative;
   padding-top: 45px;
+  font-size: 0;
+
+  @media ($desktop) {
+    padding-top: 100px;
+  }
 }
 
 .contacts__container {
+  position: relative;
   @include container;
+
+  @media ($tablet) {
+    font-size: 43px;
+    line-height: 50px;
+  }
+}
+
+.contacts__container:nth-child(1) {
+  @media ($tablet) {
+    &::before {
+      content: "";
+      position: absolute;
+      background-image: url("../img/icon-flag.svg");
+      background-repeat: no-repeat;
+      width: 47px;
+      height: 82px;
+      top: -10px;
+      right: 0;
+    }
+  }
 }
 
 .contacts__title {
@@ -13,12 +40,33 @@
   font-size: 18px;
   line-height: 30px;
   color: $color-text-title;
+
+  @media ($tablet) {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  @media ($desktop) {
+    padding-left: 175px;
+    margin-bottom: 50px;
+  }
 }
 
 .contacts__item {
   padding-bottom: 30px;
 
   font-size: 0;
+
+  @media ($tablet) {
+    display: inline-block;
+    width: 325px;
+  }
+
+  @media ($desktop) {
+    display: block;
+    padding-left: 175px;
+    padding-bottom: 0;
+  }
 }
 
 .contacts__field {
@@ -28,6 +76,12 @@
   font-size: 15px;
   line-height: 30px;
   vertical-align: top;
+
+  @media ($tablet) {
+    width: 72px;
+    font-size: 17px;
+  }
+
 }
 
 .contacts__text {
@@ -42,5 +96,23 @@
 
   &--address {
     width: 145px;
+  }
+
+  @media ($tablet) {
+    font-size: 17px;
+    width: 225px;
+  }
+}
+
+.contacts__write {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media ($desktop) {
+    margin: 0;
+    margin-right: auto;
+    margin-left: 175px;
+    margin-top: 80px;
   }
 }
