--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -8,6 +8,12 @@
   width: 260px;
 
   border-top: 1px solid #c7c7c7;
+
+  @media ($tablet) {
+    width: 566px;
+    border: 1px solid #c7c7c7;
+    padding-top: 50px;
+  }
 }
 
 .modal__title {
@@ -16,6 +22,12 @@
   line-height: 30px;
   text-align: center;
   color: $color-text-title;
+  text-transform: uppercase;
+
+  @media ($tablet) {
+    font-size: 30px;
+    line-height: 57px;
+  }
 }
 
 .modal__description {
