--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -1,4 +1,6 @@
 .production {
+  position: relative;
+
   padding-top: 25px;
 }
 
@@ -10,6 +12,15 @@
 
   background-image: url("../img/video-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
+
+  @media ($tablet) {
+    position: absolute;
+    top: 0;
+
+    width: 668px;
+    height: 455px;
+  }
 }
 
 .production__container {
@@ -32,14 +43,54 @@
 }
 
 .production__title {
+  position: relative;
   margin: 0;
 
   font-weight: bold;
   font-size: 17px;
   line-height: 24px;
   color: $color-text-title;
+
+  @media ($tablet) {
+    margin-bottom: 40px;
+    padding-top: 475px;
+    padding-right: 42px;
+    padding-left: 100px;
+
+    font-size: 20px;
+    line-height: 24px;
+
+    &::before {
+      position: absolute;
+      content: "";
+      display: block;
+      width: 32px;
+      height: 32px;
+      background-image: url("../img/icon-video.svg");
+      background-repeat: no-repeat;
+      left: 40px;
+      bottom: 0;
+    }
+  }
 }
 
 .production__description {
   font-size: 13px;
+
+  @media ($tablet) {
+    margin-bottom: 40px;
+    padding-right: 42px;
+    padding-left: 42px;
+
+    font-size: 15px;
+    line-height: 30px;
+  }
+}
+
+.production__order {
+  @media ($tablet) {
+    width: 586px;
+    margin-right: 42px;
+    margin-left: 42px;
+  }
 }
