--- a/sass/blocks/social-links.scss
+++ b/sass/blocks/social-links.scss
@@ -6,4 +6,12 @@
   text-align: center;
 
   border-bottom: 1px solid #e5e5e5;
+
+  @media ($tablet) {
+    display: block;
+    //width: 300px;
+    width: 33%;
+    float: left;
+    border: 0;
+  }
 }
