--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -29,6 +29,7 @@
 }
 
 @mixin placeholder-text {
+  font-family: "Open Sans", Arial, sans-serif;
   font-weight: normal;
   font-size: 17px;
   line-height: 18px;
