--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -40,3 +40,15 @@
     padding-bottom: 80px;
   }
 }
+
+.main-header__delivery-info {
+  display: none;
+  font-size: 15px;
+
+  @media ($tablet) {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 100px;
+  }
+}
