--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@
 @import "blocks/main-header.scss";
 @import "blocks/logo.scss";
 @import "blocks/main-menu.scss";
+@import "blocks/extra-nav.scss";
 @import "blocks/promo.scss";
 @import "blocks/best-seller.scss";
 @import "blocks/btn.scss";
