Переделал mobile меню

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,8 @@
 //index.html
 @import "blocks/main-header.scss";
 @import "blocks/logo.scss";
-@import "blocks/main-menu.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/user-nav.scss";
 @import "blocks/extra-nav.scss";
 @import "blocks/promo.scss";
 @import "blocks/best-seller.scss";
