--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -5,6 +5,10 @@
 }
 
 .main-header__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   @media ($tablet) {
     @include container;
   }
@@ -21,6 +25,20 @@
   @media ($tablet) {
     padding: 0;
   }
+}
+
+.main-header__toggle {
+  position: absolute;
+  width: 21px;
+  height: 21px;
+  border: 0;
+  font-size: 0;
+  top: 30px;
+  right: 30px;
+
+  background-color: #ffffff;
+  background-image: url("../img/icon-menu-close.svg");
+  background-repeat: no-repeat;
 }
 
 .main-header__title {
@@ -43,12 +61,4 @@
 
 .main-header__delivery-info {
   display: none;
-  font-size: 15px;
-
-  @media ($tablet) {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 100px;
-  }
 }
