--- a/sass/blocks/extra-nav.scss
+++ b/sass/blocks/extra-nav.scss
@@ -1,5 +1,29 @@
 .extra-nav {
   display: none;
+  order: 4;
+
+  padding: 0;
+  margin: 0;
+
+  list-style-type: none;
+  font-size: 0;
+
+  @media ($desktop) {
+    display: block;
+    font-size: 15px;
+    margin-right: 36px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+}
+
+.extra-nav__item {
+  @media ($desktop) {
+    display: inline-block;
+
+    vertical-align: top;
+    border-top: 0;
+  }
 }
 
 .extra-nav__link {
@@ -8,4 +32,8 @@
   color: $color-text-title;
   text-decoration: none;
   font-weight: bold;
+
+  @media ($desktop) {
+    padding-right: 50px;
+  }
 }
