--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -4,10 +4,29 @@
 
   list-style-type: none;
   width: 100%;
+  order: 2;
+  font-size: 0;
+
+  @media ($tablet) {
+    order: 4;
+    width: 60%;
+  }
+
+  @media ($desktop) {
+    order: 1;
+    width: 46%;
+  }
 }
 
 .main-nav__item {
   border-top: 1px solid #ececec;
+
+  @media ($tablet) {
+    display: inline-block;
+
+    vertical-align: top;
+    border-top: 0;
+  }
 }
 
 .main-nav__link {
@@ -19,6 +38,29 @@
   text-decoration: none;
   padding-top: 30px;
   padding-bottom: 30px;
+
+  @media ($tablet) {
+    font-size: 15px;
+    margin-right: 36px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  @media ($desktop) {
+    font-size: 17px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-right: 0;
+    padding-right: 30px;
+
+    &--catalog {
+      border-right: 1px solid #ececec;
+    }
+
+    &--order {
+      padding-left: 30px;
+    }
+  }
 }
 
 .main-nav__align-center {
@@ -27,4 +69,9 @@
   width: 204px;
   margin-left: auto;
   margin-right: auto;
+
+  @media ($tablet) {
+    padding-left: 0;
+    width: auto;
+  }
 }
