--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -5,6 +5,10 @@
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: top;
+
+  @media ($tablet) {
+    padding-top: 60px;
+  }
 }
 
 .promo__title {
