--- a/sass/blocks/user-nav.scss
+++ b/sass/blocks/user-nav.scss
@@ -1,13 +1,33 @@
 .user-nav {
+  order: 3;
   width: 100%;
   margin: 0;
   padding: 0;
 
   list-style-type: none;
+
+  @media ($tablet) {
+    flex-grow: 1;
+    width: auto;
+
+    font-size: 0;
+    text-align: right;
+  }
+
+  @media ($desktop) {
+
+  }
 }
 
 .user-nav__item {
   border-top: 1px solid #ececec;
+
+  @media ($tablet) {
+    display: inline-block;
+
+    vertical-align: top;
+    border-top: 0;
+  }
 }
 
 .user-nav__link {
@@ -20,6 +40,17 @@
   line-height: 24px;
   color: $color-text-title;
   text-decoration: none;
+
+  @media ($tablet) {
+    padding-left: 30px;
+
+    &--search {
+      font-size: 0;
+
+      border-right: 1px solid #ececec;
+      border-left: 1px solid #ececec;
+    }
+  }
 }
 
 .user-nav__align-center {
@@ -34,8 +65,8 @@
   &:before {
     content: "";
     position: absolute;
-    left: 0;
     top: 2px;
+    left: 0;
 
     opacity: 0.2;
   }
@@ -58,5 +89,9 @@
       background-image: url("../img/icon-cart.svg");
       background-repeat: no-repeat;
     }
+  }
+
+  @media ($tablet) {
+    width: auto;
   }
 }
